styles.css
h1 {
  text-align: center;
}
.collapsible {
  margin:auto;
  width: 60%;
  box-sizing: border-box;
  border: none;
  background-color: gray;
  color: white;
  text-align: left;
  padding: 5px 20px;
  cursor: pointer;
  font-size: 15px;
}
.links {
  margin: auto;
  width: 60%;
  background-color: gainsboro;
  box-sizing: border-box;
  padding: 10px 20px;
}
a {
  display: block;
  color: green;
  text-decoration: none;
  padding-bottom: 5px;
}
a:hover {
  text-decoration: underline;
}
@media (max-width: 800px) {
  .section {
    width: 80%;
  }
  .links {
    width: 80%;
  }
}

